<resources>
    <string name="app_name">TestMath</string>
    <string name="Levels">Уровни</string>
    <string name="Exit">Выход</string>
    <string name="Easy">Лёгкий</string>
    <string name="Middle">Средний</string>
    <string name="Hard">Сложный</string>
    <string name="title_activity_main_finish">MainFinishActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>